--- a/web-ui/src/less/user.less
+++ b/web-ui/src/less/user.less
@@ -16,3 +16,13 @@
     background-color: #eeffaf;
   }
 }
+
+.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  z-index: -1;
+}
